--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,9 +13,6 @@
 
 <body>
 
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-  <a class="navbar-brand" href="#">Mkyong.com</a>
-</nav>
 
 <main role="main" class="container">
 
@@ -29,6 +26,14 @@
   <ol>
     <li th:each="task : ${tasks}" th:text="${task}"></li>
   </ol>
+
+  <form action="#" th:action="@{/start}" method="post">
+    <p><input type="submit" value="START" /></p>
+  </form>
+
+  <form action="#" th:action="@{/stop}" method="post">
+    <p><input type="submit" value="STOP" /></p>
+  </form>
 
 </main>
 <!-- /.container -->
