--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Spring Boot Thymeleaf Hello World Example</title>
+  <title>Negadelphia, the sentiment tracker</title>
 
   <link rel="stylesheet" th:href="@{webjars/bootstrap/4.2.1/css/bootstrap.min.css}"/>
   <link rel="stylesheet" th:href="@{/css/main.css}"/>
@@ -16,17 +16,6 @@
 
 <main role="main" class="container">
 
-  <div class="starter-template">
-    <h1>Spring Boot Web Thymeleaf Example</h1>
-    <h2>
-      <span th:text="'Hello, ' + ${message}"></span>
-    </h2>
-  </div>
-
-  <ol>
-    <li th:each="task : ${tasks}" th:text="${task}"></li>
-  </ol>
-
   <form action="#" th:action="@{/start}" method="post">
     <p><input type="submit" value="START" /></p>
   </form>
@@ -36,7 +25,6 @@
   </form>
 
 </main>
-<!-- /.container -->
 
 <script type="text/javascript" th:src="@{webjars/bootstrap/4.2.1/js/bootstrap.min.js}"></script>
 </body>
